# CH_Project

./: .gitignore  CLAUDE.md  LICENSE  README.md  improvement.md  pyproject.toml
.github/workflows/: tests.yml
channel_heads/: __init__.py  basin_config.py  cli.py  cnn_features.py  cnn_model.py  config.py  coupling_analysis.py  first_meet_pairs_for_outlet.py  geometric_analysis.py  lengthwise_asymmetry.py  logging_config.py  plotting_utils.py  rasterizer.py  stream_utils.py
data/raw/: output_srtm.tif
env/: environment.yml
notebooks/: 00_test.ipynb  01_test.ipynb  02_basins_test.ipynb  03_all_basins_analysis.ipynb  04_all_basins_analysis_full.ipynb  all_basins_analysis.ipynb  all_basins_analysis_full.ipynb  basins_test.ipynb
notebooks/analysis/: 01_single_basin_test.ipynb  02_multi_basin.ipynb  03_all_basins.ipynb  04_all_basins_full.ipynb
notebooks/experiments/: experiment_250th.ipynb  experiment_350th.ipynb  experiment_500th.ipynb  experiment_template.ipynb  rasterization_diagnostics.ipynb
notebooks/ml/: 00_full_pipeline.ipynb  01_prepare_dataset.ipynb  02_train_classifier.ipynb  03_feature_engineering.ipynb  04_cnn_embeddings.ipynb  05_cnn_quick_eval.ipynb
scripts/: clean-cache.sh  setup-hooks.sh
src/: first_meet_pairs_for_outlet.py  plotting_utils.py  stream_utils.py
tests/: README.md  __init__.py  conftest.py  test_cnn_features.py  test_cnn_model.py  test_coupling_analysis.py  test_coupling_parallel.py  test_first_meet_pairs.py  test_geometric_analysis.py  test_rasterizer.py  test_stream_utils.py
