[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "channel-heads"
version = "0.1.0"
description = "Coupled channel-head detection and basin-level analysis"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Guy Pinkas"}
]
keywords = ["geomorphology", "hydrology", "drainage networks", "channel heads", "TopoToolbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Note: Most dependencies are managed via conda (env/environment.yml)
# These are the core requirements for pip-only installation
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "topotoolbox>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.3",
    "jupyterlab>=4.0",
]

geo = [
    "rasterio>=1.3",
    "geopandas>=1.0",
    "shapely>=2.0",
]

viz = [
    "scikit-image>=0.24",
    "folium>=0.20",
]

all = [
    "channel-heads[dev,geo,viz]",
]

[project.urls]
Homepage = "https://github.com/yourusername/channel-heads"
Documentation = "https://github.com/yourusername/channel-heads/blob/main/CLAUDE.md"
Repository = "https://github.com/yourusername/channel-heads"
Issues = "https://github.com/yourusername/channel-heads/issues"

[project.scripts]
ch-analyze = "channel_heads.cli:main"

[tool.setuptools]
packages = ["channel_heads"]

[tool.setuptools.package-data]
channel_heads = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=channel_heads --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | env
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "N802",  # function name should be lowercase (allow delta_L naming from paper)
    "N803",  # argument name should be lowercase (allow mathematical notation)
    "N806",  # variable in function should be lowercase (allow mathematical notation)
    "N815",  # mixedCase variable in class scope (allow delta_L naming from paper)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
